--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body{
 .apresentacao{
     padding: 5% 15%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 82px;
 }
@@ -90,11 +90,7 @@ body{
     background-color: var(--cor-hover);
 }
 .apresentacao__imagem{
-    width: 30%;
-    position:absolute;
-    top:20%;
-    left:60%;
-    bottom: 10%;
+    width: 50%;
 }
 .rodape{
     color: var(--cor-primaria);
